# cpp-plagiarism-detector

./: .gitignore  README.md  pyproject.toml
code_plagiarism_detector/: config.py  detector.py  extractor.py  iterator.py  main.py  model.py  util.py
example/: README.md  diff_1.cpp  diff_2.cpp  same_1.cpp  same_2.cpp  test.tar.xz
example/FP/TID/: Kelompok 10_Managemen Parkir_108_123_142.cpp  Kelompok11_SistemBookingHotel_109_111_131.cpp  Kelompok1_ProgramJam_117_122_106.cpp  Kelompok2_Penghitung Berat Badan Ideal_23051204119_23051204120_23051204127.cpp  Kelompok3_.SistemPPDB_118_124_128.cpp  Kelompok4_SistemKasir_107_116_133.cpp  Kelompok5_KonversiSuhu_125_134_142.cpp  Kelompok6_sistem manajemen berkas_113_126_144.cpp  Kelompok7_Kalkulator Matriks_115_129_135.cpp  Kelompok8_Absensi_112_121_130.cpp  Kelompok9_KonversiMataUang_110_114_143.cpp
example/FP/TIH/: KELOMPOK1_MESINBANK.cpp  Kelompok 2_Program Quiz Sederhana.cpp  Kelompok11_KalkulatorCGPA.cpp  Kelompok3_SistemPencetakKTM.cpp  Kelompok5_PenyewaanLapangan.cpp  Kelompok6_SistemPemesananMakananOnline.cpp  Kelompok8_PencatatKeuangan.cpp  Kelompok9_PembelianTiket.cpp  kel10_topup-game.cpp  kelompok1_PerpustakaanSederhana.cpp  uas.cpp
